5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2171/executions/1760_674.log
== TEST (2019-05-22 10:57:40) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
a = array(["quantidade de elementos do vetor :"])
b = array(["primeiro elemento do vetor :"])
c = array(["ultimo elemento do vetor :"])
d = array(["maior elemento do vetor :"])
e = array(["menor elemento do vetor :"])
f = array(["soma dos elementos do vetor :"])

print(a,b,c,d,f,)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 10:58:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
a = array(["quantidade de elementos do vetor :"])
b = array(["primeiro elemento do vetor :"])
c = array(["ultimo elemento do vetor :"])
d = array(["maior elemento do vetor :"])
e = array(["menor elemento do vetor :"])
f = array(["soma dos elementos do vetor :"])

print(round(a,b,c,d,f(2))
-- ERROR:
File "XXXX", line 12
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:05:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
a = array(["digite quantidade de elementos do vetor :"])
b = array(["digite primeiro elemento do vetor :"])
c = array(["digite ultimo elemento do vetor :"])
d = array(["digite maior elemento do vetor :"])
e = array(["digite menor elemento do vetor :"])
f = array(["digite soma dos elementos do vetor :"])

print(round(a,b,c,d,f(2))
-- ERROR:
File "XXXX", line 12
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:05:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
a = array(["digite quantidade de elementos do vetor :"])
b = array(["digite primeiro elemento do vetor :"])
c = array(["digite ultimo elemento do vetor :"])
d = array(["digite maior elemento do vetor :"])
e = array(["digite menor elemento do vetor :"])
f = array(["digite soma dos elementos do vetor :"])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:06:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
a = array(eval["digite quantidade de elementos do vetor :"])
b = array(eval["digite primeiro elemento do vetor :"])
c = array(eval["digite ultimo elemento do vetor :"])
d = array(eval["digite maior elemento do vetor :"])
e = array(eval["digite menor elemento do vetor :"])
f = array(eval["digite soma dos elementos do vetor :"])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:15:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
a = array(eval["digite quantidade de elementos do vetor :"])
b = array(eval["digite primeiro elemento do vetor :"])
c = array(eval["digite ultimo elemento do vetor :"])
d = array(eval["digite maior elemento do vetor :"])
e = array(eval["digite menor elemento do vetor :"])
f = array(eval["digite soma dos elementos do vetor :"])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:15:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
a = array(eval["digite quantidade de elementos do vetor :"])
b = array(eval["digite primeiro elemento do vetor :"])
c = array(eval["digite ultimo elemento do vetor :"])
d = array(eval["digite maior elemento do vetor :"])
e = array(eval["digite menor elemento do vetor :"])
f = array(eval["digite soma dos elementos do vetor :"])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:15:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
a = array(eval["digite quantidade de elementos do vetor :"])
b = array(eval["digite primeiro elemento do vetor :"])
c = array(eval["digite ultimo elemento do vetor :"])
d = array(eval["digite maior elemento do vetor :"])
e = array(eval["digite menor elemento do vetor :"])
f = array(eval["digite soma dos elementos do vetor :"])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:15:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
a = array(eval["digite quantidade de elementos do vetor :"])
b = array(eval["digite primeiro elemento do vetor :"])
c = array(eval["digite ultimo elemento do vetor :"])
d = array(eval["digite maior elemento do vetor :"])
e = array(eval["digite menor elemento do vetor :"])
f = array(eval["digite soma dos elementos do vetor :"])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:15:59) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
a = arra(["digite quantidade de elementos do vetor :"])
b = array(["digite primeiro elemento do vetor :"])
c = array(["digite ultimo elemento do vetor :"])
d = array(["digite maior elemento do vetor :"])
e = array(["digite menor elemento do vetor :"])
f = array(["digite soma dos elementos do vetor :"])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:19:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
a = array(["digite size :"])
b = array(["digite primeiro elemento do vetor )
c = array(["digite ultimo elemento do vetor :"])
d = array(["digite maior elemento do vetor :"])
e = array(["digite menor elemento do vetor :"])
f = array(["digite soma dos elementos do vetor :"])


-- ERROR:
File "XXXX", line 5
    b = array(["digite primeiro elemento do vetor )
                                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:22:32) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
a = array(["digite quantidade de elemento :"])
b = array(["digite primeiro elemento do vetor :]) 
c = array(["digite ultimo elemento do vetor :"])
d = array(["digite maior elemento do vetor :"])
e = array(["digite menor elemento do vetor :"])
f = array(["digite soma dos elementos do vetor :"])


-- ERROR:
File "XXXX", line 5
    b = array(["digite primeiro elemento do vetor :]) 
                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:44:08) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
a = array(size["digite quantidade de elemento :"])
b = array({"digite primeiro elemento do vetor :"}) 
c = array(["digite ultimo elemento do vetor :"])
d = array(max["digite maior elemento do vetor :"])
e = array(min["digite menor elemento do vetor :"])
f = array(sum["digite soma dos elementos do vetor :"])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:44:22) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
a = array(["digite quantidade de elemento :"])
b = array({"digite primeiro elemento do vetor :"}) 
c = array(["digite ultimo elemento do vetor :"])
d = array(max["digite maior elemento do vetor :"])
e = array(min["digite menor elemento do vetor :"])
f = array(sum["digite soma dos elementos do vetor :"])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
